--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -27,6 +27,12 @@ samwise:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+merry:
+  name: Merry Brandybuck
+  email: merry@example.org
+  password_digest: <%= User.digest('password')%>
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 <% 30.times do |n| %>
 user_<%= n %>:
